--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "1. **SQL Server** instalado e rodando 2. **SQL Server Management Studio (SSMS)** ou **Azure Data Studio** 3. **Node.js** versão 16 ou superior",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"No tests yet\""
-
+    "test": "echo \"Error: no test specified\" ",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
