--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "homepage": "https://github.com/brunolibardoni/SUS-Agenda-Back#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mssql": "^11.0.1"
+    "express-session": "^1.18.2",
+    "mssql": "^11.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
